--- a/H5JD-swiper插件轮播图/index.html
+++ b/H5JD-swiper插件轮播图/index.html
@@ -8,6 +8,9 @@
     <!-- 引入CSS初始化文件 -->
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/swiper-bundle.css">
+    <script src="js/swiper-bundle.js"></script>
+    <script src="js/index.js"></script>
     <title>京东移动端首页</title>
 </head>
 
@@ -33,7 +36,20 @@
     <!-- 主体内容部分 -->
     <div class="main-content">
         <!-- 滑动图 -->
-        <div class="slider"><img src="upload/banner.dpg" alt=""></div>
+        <div class="slider">
+            <div class="swiper-container">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide"><img src="upload/banner.dpg" alt=""></div>
+                    <div class="swiper-slide"><img src="upload/banner.dpg" alt=""></div>
+                    <div class="swiper-slide"><img src="upload/banner.dpg" alt=""></div>
+                    <div class="swiper-slide"><img src="upload/banner.dpg" alt=""></div>
+                    <div class="swiper-slide"><img src="upload/banner.dpg" alt=""></div>
+
+                </div>
+                <!-- Add Pagination -->
+                <div class="swiper-pagination"></div>
+            </div>
+        </div>
         <!-- 品牌日 -->
         <div class="barand">
             <div>
